Added link to GitHub repository

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 				This project was coded by
 				<a href="https://github.com/johnsonj70" target="_blank">
 					Janice Johnson</a>, is open-sourced on
-				<a href="https://github.com/johnsonj70/Vanilla-Weather/tree/main" target="_blank">GitHub</a>
+				<a href="https://github.com/johnsonj70/World-Clock" target="_blank">GitHub</a>
 				and website hosted on
-				<a href="https://j-vanilla-weather.netlify.app/" target="_blank">Netlify</a>
+				<a href="https://world-clock-application-js.netlify.app/" target="_blank">Netlify</a>
 			
 </footer>
 <script src="javascript/index.js"></script>
