--- a/index.html
+++ b/index.html
@@ -7,8 +7,23 @@
     <title>World Clock - Janice Johnson</title>
 </head>
 <body>
+    <div class="container"></div>
 <h1>World Clock</h1>
-
+<select>
+    <option value="">Select a city..</option>
+    <option value="">London</option>
+    <option value="">New York</option>
+    <option value="">Toronto</option>
+    <option value="">Dusseldorf</option>
+</select>
+<div class="city">
+    <h2>London 🇬🇧</h2>
+    <div class="date">10 July 2025</div>
+    <div class="time">18:19:10 PM</div>
+    <h2>New York 🇺🇸</h2>
+    <div class="date">10 July 2025</div>
+    <div class="time">18:19:10 PM</div>
+</div>
 <footer>
 				This project was coded by
 				<a href="https://github.com/johnsonj70" target="_blank">
