Styled project with CSS

--- a/index.html
+++ b/index.html
@@ -7,27 +7,34 @@
     <title>World Clock - Janice Johnson</title>
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
 <h1>World Clock</h1>
 <select>
     <option value="">Select a city..</option>
-    <option value="">London</option>
-    <option value="">New York</option>
+    <option value="">Paris</option>
+    <option value="">Cape Town</option>
     <option value="">Toronto</option>
     <option value="">Dusseldorf</option>
 </select>
 <div class="city">
-    <h2>London 🇬🇧</h2>
-    <div class="date">10 July 2025</div>
-    <div class="time">18:19:10 PM</div>
-    <h2>New York 🇺🇸</h2>
-    <div class="date">10 July 2025</div>
-    <div class="time">18:19:10 PM</div>
+    <div>
+        <h2>London 🇬🇧</h2>
+        <div class="date">10 July 2025</div>
+    </div>
+    <div class="time">18:19:10 <small> PM</small></div>
+</div>
+<div class="city">
+    <div>
+        <h2>New York 🇺🇸</h2>
+        <div class="date">10 July 2025</div>
+    </div>
+    <div class="time">18:19:10 <small> PM</small></div>
+</div>
 </div>
 <footer>
-				This project was coded by
+				This project was coded with ❤️ by
 				<a href="https://github.com/johnsonj70" target="_blank">
-					Janice Johnson</a>, is open-sourced on
+					<strong>Janice Johnson</strong></a>, is open-sourced on
 				<a href="https://github.com/johnsonj70/World-Clock" target="_blank">GitHub</a>
 				and website hosted on
 				<a href="https://world-clock-application-js.netlify.app/" target="_blank">Netlify</a>
