--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
 <body>
     <div class="container">
 <h1>World Clock</h1>
-<select>
+<select id="city">
     <option value="">Select a city..</option>
-    <option value="">Bridgetown</option>
-    <option value="">Cape Town</option>
-    <option value="">Dusseldorf</option>
-    <option value="">Las Vegas</option>
+    <option value="America/Barbados">Barbados</option>
+    <option value="Africa/Johannesburg">Johannesburg</option>
+    <option value="Europe/Istanbul">Istanbul</option>
+    <option value="America/Las_Vegas">Las Vegas</option>
 </select>
-<div class="city" id="london">
-    <div>
-        <h2>London 🇬🇧</h2>
-        <div class="date"></div>
+<div id="cities">
+    <div class="city" id="london">
+            <div>
+            <h2>London 🇬🇧</h2>
+            <div class="date"></div>
     </div>
     <div class="time"></div>
 </div>
@@ -31,6 +32,7 @@
         <div class="date"></div>
     </div>
     <div class="time"></div>
+</div>
 </div>
 </div>
 <footer>
