Added the current location

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1>World Clock</h1>
 <select id="city">
     <option value="">Select a city..</option>
-    <option value="America/Barbados">Barbados</option>
+    <option value="current">My current location</option>
     <option value="Africa/Johannesburg">Johannesburg</option>
     <option value="Europe/Istanbul">Istanbul</option>
     <option value="America/Las_Vegas">Las Vegas</option>
