--- a/index.html
+++ b/index.html
@@ -12,38 +12,57 @@
     <title>World Clock - Janice Johnson</title>
 </head>
 <body>
-    <div class="container">
-<h1>World Clock</h1>
-<select id="city">
-    <option value="">Select a city..</option>
-    <option value="current">My current location</option>
-    <option value="Africa/Johannesburg">Johannesburg</option>
-    <option value="Europe/Istanbul">Istanbul</option>
-    <option value="America/Las_Vegas">Las Vegas</option>
-</select>
-<div id="cities">
-    <div class="city" id="london">
-            <div>
-            <h2>London 🇬🇧</h2>
-            <div class="date"></div>
+<div class="container">
+    <h1>World Clock</h1>
+        <select id="city">
+            <option value="">Select City</option>
+            <option value="current">Current Location</option>
+            <option value="Africa/Johannesburg">Johannesburg</option>
+            <option value="Europe/Istanbul">Istanbul</option>
+            <option value="America/Las_Vegas">Las Vegas</option>
+        </select>
+        <div id="cities">
+            <div class="city" id="london">
+                <div>
+                    <h2>London</h2>
+                    <div class="date"></div>
+                </div>
+                <div class="time"></div>
+            </div>
+            <div class="city" id="new-york">
+                <div>
+                    <h2>New York</h2>
+                    <div class="date"></div>
+                </div>
+                <div class="time"></div>
+            </div>
+            <div class="city" id="paris">
+                <div>
+                    <h2>Paris</h2>
+                    <div class="date"></div>
+                </div>
+                <div class="time"></div>
+            </div>
+            <div class="city" id="los-angeles">
+                <div>
+                    <h2>Los Angeles</h2>
+                    <div class="date"></div>
+                </div>
+                <div class="time"></div>
+            </div>
+            <div class="city" id="tokyo">
+                <div>
+                    <h2>Tokyo</h2>
+                    <div class="date"></div>
+                </div>
+                <div class="time"></div>
+            </div>
+        </div>
     </div>
-    <div class="time"></div>
-</div>
-<div class="city" id="new-york">
-    <div>
-        <h2>New York 🇺🇸</h2>
-        <div class="date"></div>
-    </div>
-    <div class="time"></div>
-</div>
-</div>
-</div>
 <footer>
-				This project was coded with ❤️ by
-				<a href="https://github.com/johnsonj70" target="_blank">
-					<strong>Janice Johnson</strong></a>, is open-sourced on
+				This project is open-sourced on
 				<a href="https://github.com/johnsonj70/World-Clock" target="_blank">GitHub</a>
-				and website hosted on
+				and hosted on
 				<a href="https://world-clock-application-js.netlify.app/" target="_blank">Netlify</a>
 			
 </footer>
